Fix QDirIterator wildcard when fallback install script is searched for

Otherwise, we do not find scripts like "install-user.sh".

BUG: 453870


(cherry picked from commit 9bdb36abf09fbae9ba045b95bcf1b676c8e5da41)